--- a/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Services/VideotapesGalore.Services.csproj
+++ b/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Services/VideotapesGalore.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VideotapesGalore.Models\VideotapesGalore.Models.csproj" />
+    <ProjectReference Include="..\VideotapesGalore.Models\VideotapesGalore.Repositories.csproj" />
+  </ItemGroup>
 </Project>
