--- a/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Repositories/VideotapesGalore.Repositories.csproj
+++ b/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Repositories/VideotapesGalore.Repositories.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="automapper" Version="7.0.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VideotapesGalore.Models\VideotapesGalore.Models.csproj" />
   </ItemGroup>
 </Project>
