--- a/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.WebApi/appsettings.json
+++ b/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.WebApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=videotapes-galore-db.c5qvh3fggdj0.eu-west-2.rds.amazonaws.com;port=3306;database=videotapesGalore;user=eddast;password=Margret1337"
+  },
   "AllowedHosts": "*"
 }
