--- a/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.WebApi/appsettings.json
+++ b/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.WebApi/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=videotapes-galore-db.c5qvh3fggdj0.eu-west-2.rds.amazonaws.com;port=3306;database=videotapesGalore;user=eddast;password=Margret1337"
+    "DefaultConnection": "server=videotapes-galore-db.c5qvh3fggdj0.eu-west-2.rds.amazonaws.com;port=3306;database=videotapesGalore;user=eddast;password=Margret1337;Convert Zero Datetime=True"
   },
   "AllowedHosts": "*"
 }
