--- a/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Repositories/VideotapesGalore.Repositories.csproj
+++ b/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Repositories/VideotapesGalore.Repositories.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="automapper" Version="7.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="MySql.Data" Version="8.0.12" />
   </ItemGroup>
 
