--- a/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/Dockerfile
+++ b/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/Dockerfile
@@ -1,16 +1,20 @@
 FROM microsoft/dotnet:sdk AS build-env
-WORKDIR ./VideotapesGalore.WebApi
+WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY *.csproj ./
-RUN dotnet restore
+COPY VideotapesGalore.WebApi/*.csproj ./VideotapesGalore.WebApi/
+COPY VideotapesGalore.Services/*.csproj ./VideotapesGalore.Services/
+COPY VideotapesGalore.Repositories/*.csproj ./VideotapesGalore.Repositories/
+COPY VideotapesGalore.Models/*.csproj ./VideotapesGalore.Models/
+RUN cd ./VideotapesGalore.WebApi/ && dotnet restore
 
 # Copy everything else and build
-COPY . ./
-RUN dotnet publish -c Release -o out
+COPY . .
+RUN cd ./VideotapesGalore.WebApi/ && dotnet build -c Release -o /app
+RUN cd ./VideotapesGalore.WebApi/ && dotnet publish -c Release -o out
 
 # Build runtime image
 FROM microsoft/dotnet:aspnetcore-runtime
-WORKDIR ./VideotapesGalore.WebApi
+WORKDIR /app
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "VideotapesGalore.WebApi.dll"]
