--- a/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Tests/VideotapesGalore.Tests.csproj
+++ b/Projects/P2 Videotapes Galore/VideotapesGaloreAPI/VideotapesGalore.Tests/VideotapesGalore.Tests.csproj
@@ -7,9 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="NBuilder" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VideotapesGalore.Repositories\VideotapesGalore.Repositories.csproj" />
+    <ProjectReference Include="..\VideotapesGalore.Services\VideotapesGalore.Services.csproj" />
+    <ProjectReference Include="..\VideotapesGalore.Models\VideotapesGalore.Models.csproj" />
   </ItemGroup>
 
 </Project>
